--- a/index.html
+++ b/index.html
@@ -8,67 +8,92 @@
   
   <title>Frontend Mentor | Recipe page</title>
 
-  <link rel="stylesheet" src="styles.css">
-  
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 
-  Simple Omelette Recipe
+  <main id="recipe">
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    <header>
+      <img id="header-image" src="assets/images/image-omelette.jpeg" alt="Omelette with vegetables"/>
+      <h1>Simple Omelette Recipe</h1>
+    </header>
 
-  Preparation time
+      <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+      to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+      <div id="prep-time">
+        <h3>Preparation time</h3>
+        <ul>
+          <li><span class="list-start">Total:</span> Approximately 10 minutes</li>
+          <li><span class="list-start">Preparation:</span> 5 minutes</li>
+          <li><span class="list-start">Cooking:</span> 5 minutes</li>
+        </ul>
+      </div>
 
-  Ingredients
+      <section>
+        <h2>Ingredients</h2>
+     
+      <ul>
+        <li>2-3 large eggs</li>
+        <li>Salt, to taste</li>
+        <li>Pepper, to taste</li>
+        <li>1 tablespoon of butter or oil</li>
+        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      </ul>
+    </section>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+      <hr>
 
-  Instructions
+      <section>
+        <h2>Instructions</h2>
 
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
+        <ol>
+          <li><span class="list-start">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+        You can add a tablespoon of water or milk for a fluffier texture.</li>
+          <li><span class="list-start">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+          <li><span class="list-start">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+        the eggs evenly coat the surface.</li>
+          <li><span class="list-start">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the 
+        middle, sprinkle your chosen fillings over one half of the omelette.</li>
+          <li><span class="list-start">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the 
+        fillings. Let it cook for another minute, then slide it onto a plate.</li>
+          <li><span class="list-start">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
+        </ol>
+      </section>
 
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+      <hr> 
 
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
+      <section>
+        <h2>Nutrition</h2>
+        <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
+        <div id="nutrition-chart">
+          <span class="chart-item nutrition-label">Calories</span>
+          <span class="chart-item nutrition-value">277kcal</span>
 
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
+          <hr>
+          <span class="chart-item nutrition-label">Carbs</span>
+          <span class="chart-item nutrition-value">0g</span>
+          <hr>
 
-  Enjoy: Serve hot, with additional salt and pepper if needed.
+          <span class="chart-item nutrition-label">Protein</span>
+          <span class="chart-item nutrition-value">20g</span>
+          <hr>
 
-  Nutrition
+          <span class="chart-item nutrition-label">Fat</span>
+          <span class="chart-item nutrition-value">22g</span>
+        </div>
+      </section>  
+      
+  </main>
 
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
   
-  <div class="attribution">
+  
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://github.com/curricle">S. Jordan</a>.
+  </footer>
 </body>
 </html>
