--- a/index.html
+++ b/index.html
@@ -23,26 +23,27 @@
       <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
       to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-      <div id="prep-time">
+      <section id="prep-time">
         <h3>Preparation time</h3>
+        
         <ul>
           <li><span class="list-start">Total:</span> Approximately 10 minutes</li>
           <li><span class="list-start">Preparation:</span> 5 minutes</li>
           <li><span class="list-start">Cooking:</span> 5 minutes</li>
         </ul>
-      </div>
+      </section>
 
       <section>
         <h2>Ingredients</h2>
-     
-      <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
-        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-      </ul>
-    </section>
+
+        <ul>
+          <li>2-3 large eggs</li>
+          <li>Salt, to taste</li>
+          <li>Pepper, to taste</li>
+          <li>1 tablespoon of butter or oil</li>
+          <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        </ul>
+      </section>
 
       <hr>
 
@@ -67,6 +68,7 @@
 
       <section>
         <h2>Nutrition</h2>
+
         <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
         <div id="nutrition-chart">
